# reuseify

./: .gitignore  README.md  pyproject.toml  reuse_annotate_authors.json  reuse_annotate_authors.json.license
.github/workflows/: pypi.yml  reuse.yml
src/reuseify/: __init__.py  annotate.py  cli.py  get_authors.py
