# SPDX-FileCopyrightText: 2026 Sahil Jhawar
# SPDX-FileContributor: Sahil Jhawar
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reuseify"
version = "0.1.2"
description = "Automate REUSE license annotation from git history."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "reuse>=6.2.0",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSES/GPL-3.0-or-later.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[project.scripts]
reuseify = "reuseify.cli:app"

[tool.setuptools.packages.find]
where = ["src"]


[project.urls]
Homepage = "https://github.com/sahiljhawar/reuseify"
Tracker = "https://github.com/sahiljhawar/reuseify/issues"

[tool.bumpver]
current_version = "0.1.2"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"src/reuseify/__init__.py" = ['__version__ = "{version}"']